--- a/public/css/style.css
+++ b/public/css/style.css
@@ -588,7 +588,8 @@ footer {
 .slide-img-side img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    padding: 15px;
     transition: 0.5s;
 }
 
